--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <img src="dr.jpg" alt="Foto do Dr. Fernando Carneiro" class="profile-photo">
             </div>
             <div class="about-content">
-                <h2 class="section-title">Sobre Mim</h2>
+                <h2 class="section-title">Sobre</h2>
                 <p>A Clínica Allegra nasceu com a missão de proporcionar um atendimento odontológico de excelência, sempre colocando o bem-estar e a satisfação de cada paciente em primeiro lugar. Sob a liderança do **Dr. Fernando Carneiro**, dentista experiente e apaixonado pela profissão, unimos tecnologia de ponta a um cuidado humano e acolhedor. Aqui, sua saúde bucal é prioridade, e nosso objetivo é garantir um sorriso saudável, bonito e duradouro ao longo da vida.</p>
             </div>
         </div>
@@ -147,4 +147,5 @@
 
     <script src="scripts.js"></script>
 </body>
+
 </html>
